import { int, mysqlEnum, mysqlTable, text, timestamp, varchar } from "drizzle-orm/mysql-core";

/**
 * Core user table backing auth flow.
 * Extend this file with additional tables as your product grows.
 * Columns use camelCase to match both database fields and generated types.
 */
export const users = mysqlTable("users", {
  /**
   * Surrogate primary key. Auto-incremented numeric value managed by the database.
   * Use this for relations between tables.
   */
  id: int("id").autoincrement().primaryKey(),
  /** Manus OAuth identifier (openId) returned from the OAuth callback. Unique per user. */
  openId: varchar("openId", { length: 64 }).notNull().unique(),
  name: text("name"),
  email: varchar("email", { length: 320 }),
  loginMethod: varchar("loginMethod", { length: 64 }),
  role: mysqlEnum("role", ["user", "admin"]).default("user").notNull(),
  createdAt: timestamp("createdAt").defaultNow().notNull(),
  updatedAt: timestamp("updatedAt").defaultNow().onUpdateNow().notNull(),
  lastSignedIn: timestamp("lastSignedIn").defaultNow().notNull(),
});

export type User = typeof users.$inferSelect;
export type InsertUser = typeof users.$inferInsert;

/**
 * Subscription tiers for access control
 */
export const subscriptionTiers = ["free", "basic", "premium", "elite"] as const;
export type SubscriptionTier = typeof subscriptionTiers[number];

/**
 * Trading signals generated by the AI engine
 */
export const signals = mysqlTable("signals", {
  id: int("id").autoincrement().primaryKey(),
  asset: varchar("asset", { length: 50 }).notNull(),
  action: mysqlEnum("action", ["BUY", "SELL"]).notNull(),
  strategyType: varchar("strategy_type", { length: 100 }).notNull(),
  entryPrice: varchar("entry_price", { length: 50 }).notNull(), // Store as string to avoid decimal precision issues
  stopLoss: varchar("stop_loss", { length: 50 }).notNull(),
  takeProfit: varchar("take_profit", { length: 50 }).notNull(),
  positionSizePercent: varchar("position_size_percent", { length: 10 }).default("2.00").notNull(),
  confidenceScore: int("confidence_score").notNull(), // 0-100
  rationale: text("rationale"),
  createdAt: timestamp("created_at").defaultNow().notNull(),
  outcome: mysqlEnum("outcome", ["open", "win", "loss", "neutral"]).default("open"),
  closedAt: timestamp("closed_at"),
  actualReturnPercent: varchar("actual_return_percent", { length: 20 }),
});

export type Signal = typeof signals.$inferSelect;
export type InsertSignal = typeof signals.$inferInsert;

/**
 * Strategy performance tracking
 */
export const strategyPerformance = mysqlTable("strategy_performance", {
  id: int("id").autoincrement().primaryKey(),
  strategyName: varchar("strategy_name", { length: 100 }).notNull().unique(),
  winRate7d: varchar("win_rate_7d", { length: 10 }),
  winRate30d: varchar("win_rate_30d", { length: 10 }),
  totalSignals: int("total_signals").default(0).notNull(),
  avgReturnPercent: varchar("avg_return_percent", { length: 20 }),
  status: mysqlEnum("status", ["active", "paused"]).default("active").notNull(),
  lastUpdated: timestamp("last_updated").defaultNow().onUpdateNow().notNull(),
});

export type StrategyPerformance = typeof strategyPerformance.$inferSelect;
export type InsertStrategyPerformance = typeof strategyPerformance.$inferInsert;

/**
 * User subscriptions (Stripe integration)
 */
export const subscriptions = mysqlTable("subscriptions", {
  id: int("id").autoincrement().primaryKey(),
  userId: int("user_id").notNull().references(() => users.id, { onDelete: "cascade" }),
  stripeSubscriptionId: varchar("stripe_subscription_id", { length: 255 }).unique(),
  stripeCustomerId: varchar("stripe_customer_id", { length: 255 }),
  tier: mysqlEnum("tier", subscriptionTiers).default("free").notNull(),
  status: mysqlEnum("status", ["active", "canceled", "past_due"]).default("active").notNull(),
  currentPeriodEnd: timestamp("current_period_end"),
  createdAt: timestamp("created_at").defaultNow().notNull(),
  updatedAt: timestamp("updated_at").defaultNow().onUpdateNow().notNull(),
});

export type Subscription = typeof subscriptions.$inferSelect;
export type InsertSubscription = typeof subscriptions.$inferInsert;

/**
 * User notification preferences
 */
export const userPreferences = mysqlTable("user_preferences", {
  id: int("id").autoincrement().primaryKey(),
  userId: int("user_id").notNull().references(() => users.id, { onDelete: "cascade" }).unique(),
  discordWebhook: varchar("discord_webhook", { length: 500 }),
  emailNotifications: int("email_notifications").default(1).notNull(), // boolean as int
  apiKey: varchar("api_key", { length: 64 }).unique(),
  createdAt: timestamp("created_at").defaultNow().notNull(),
  updatedAt: timestamp("updated_at").defaultNow().onUpdateNow().notNull(),
});

export type UserPreferences = typeof userPreferences.$inferSelect;
export type InsertUserPreferences = typeof userPreferences.$inferInsert;